# inpu

./: Cargo.toml  package.json
src/: main.rs  weight.rs
